# YOLOZU

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  IMPLEMENTATION_SUMMARY.md  LICENSE  LINT_FIXES_NEEDED.md  MANIFEST.in  NOTICE  PR11_REVIEW_FIXES.md  README.md  RELEASE.md  Readme_jp.md  SECURITY.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_P2.md  pyproject.toml  pytest.ini  refresh_beads_sync.sh  requirements-dev.txt  requirements-test.txt  requirements.txt  rt_detr_6dof_geom_mim_spec_en_v0_4.md  ruff.toml  test_setting.yaml  todo_pytorch_trt.md  todo_symmetry_commonsense_realtime.md  todo_yolo26_competition.md  train_setting.yaml
.beads/: .gitignore  config.yaml  issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  container.yml  publish.yml
baselines/: yolo26_targets.json
baselines/yolo26_runs/: .gitignore  README.md
configs/: README.md  benchmark_latency_example.json  tune_gate_weights_example.json
configs/continual/: rtdetr_pose_domain_inc_example.yaml
configs/examples/: test_setting.yaml  train_contract.yaml  train_setting.yaml
configs/runtime/: constraints.yaml  hessian_refine_example.yaml
configs/yolo26_rtdetr_pose/: yolo26l.json  yolo26m.json  yolo26n.json  yolo26s.json  yolo26x.json
data/smoke/: README.md
deploy/docker/: Dockerfile  Dockerfile.demo  README.md
deploy/pyinstaller/: README.md  yolozu_entrypoint.py
deploy/runpod/: Dockerfile  Dockerfile.rtdetr_pose  README.md  bootstrap_bop_tless_train_primesense.sh  bootstrap_coco_keypoints_val2017.sh  bootstrap_coco_val2017.sh  refresh_beads_sync.sh  run_coco_keypoints_oracle_eval.sh  run_compliance.sh  run_rtdetr_pose_backend_suite.sh  run_rtdetr_pose_bop_tless_pose_eval.sh  (+3 more)
docs/: README.md  adapter_contract.md  adapter_strategy.md  adapter_templates.md  ai_first.md  backbones.md  beads_github_workflow.md  benchmark_latency.md  benchmark_publication.md  continual_learning.md  copilot_mcp_integration.md  cotta_design_spec.md  cotta_validation.md  cvat_keypoints_recovery.md  distillation.md  doctor_diagnostics.md  eata_benchmark.md  eata_design_spec.md  external_inference.md  gate_weight_tuning.md  hessian_solver.md  hpo_sweep.md  hpo_sweep_example.json  import_adapters.md  license_policy.md  llm_integrations.md  manifest_authoring_workflow.md  manifest_coverage_audit.md  manifest_declarative_spec.md  mcp_extension_architecture.md  migrate.md  mim_inference.md  onnx_export_parity.md  openai_mcp_actions.md  predictions_schema.md  proof_onepager.md  quantization.md  real_model_interface.md  repo_map.md  rfc_workflow.md  (+26 more)
examples/infer_cpp/: CMakeLists.txt  README.md
examples/infer_cpp/docker/: Dockerfile.onnxrt  Dockerfile.trt
examples/infer_cpp/src/: bin_io.h  json_escape.h  main_onnxrt.cpp  main_stub.cpp  main_trt.cpp  shape.h  yolozu_predictions.h
manual/: Makefile  README.md  main.tex  references.bib
reports/: coco_eval_rtdetr_pose_gpu_matcher.json  pred_coco128_rtdetr_pose_gpu_matcher.json
rtdetr_pose/: README.md  __init__.py
schemas/: predictions.schema.json
scripts/: smoke.sh
tests/: test_adapter_parity_suite.py  test_adapter_starters.py  test_backbone_shapes.py  test_backend_parity_matrix.py  test_benchmark.py  test_benchmark_eata_stability_tool.py  test_benchmark_keypoints_eval_tool.py  test_benchmark_latency.py  test_benchmark_sar_robustness_tool.py  test_boxes.py  test_build_trt_engine.py  test_calibrate_predictions_lbfgs.py  test_canonical_schema.py  test_check_keypoints_parity_tool.py  test_cli_args.py  test_coco128_smoke.py  test_coco_eval_conversion.py  test_coco_keypoints_eval.py  test_config_loader.py  test_continual_metrics.py  test_continual_regularizers.py  test_cuda_smoke_rtdetr_pose.py  test_dataset_keypoints.py  test_dataset_manifest.py  test_dataset_mask_labels.py  test_dataset_seg_polygons.py  test_dataset_ultralytics_compat.py  test_dataset_validator.py  test_distillation.py  test_doctor_import_cli.py  test_eval_cotta_drift_tool.py  test_eval_instance_segmentation_tool.py  test_eval_keypoints_tool.py  test_eval_segmentation_tool.py  test_eval_suite_export_settings.py  test_export_onnx_smoke.py  test_export_predictions_lora_cli.py  test_export_predictions_tta_log.py  test_export_predictions_ttt_cli.py  test_export_trt_tool.py  (+81 more)
tools/: ablate_constraints.py  adapter_parity_suite.py  audit_manifest_inputs_vs_help.py  audit_yolozu_manifest_flags.py  backend_parity_matrix.py  benchmark.py  benchmark_eata_stability.py  benchmark_keypoints_eval.py  benchmark_latency.py  benchmark_sar_robustness.py  build_manifest.py  build_trt_engine.py  calibrate_predictions.py  calibrate_scores.py  check_gates.py  check_golden_compatibility.py  check_keypoints_parity.py  check_license_policy.py  check_map_targets.py  check_predictions_parity.py  check_predictions_parity_trt.py  convert_coco_instance_seg_predictions.py  distill_predictions.py  download_bop_dataset.py  eval_coco.py  eval_continual.py  eval_cotta_drift.py  eval_instance_segmentation.py  eval_keypoints.py  eval_pose.py  eval_segmentation.py  eval_suite.py  example_mim_inference.py  export_actions_openapi.py  export_predictions.py  export_predictions_onnxrt.py  export_predictions_trt.py  export_predictions_ultralytics.py  export_trt.py  export_ultralytics_predictions.py  (+55 more)
yolozu/: __init__.py  adapter.py  benchmark.py  boxes.py  calibration.py  canonical.py  cli.py  cli_args.py  coco_convert.py  coco_eval.py  coco_keypoints_eval.py  config.py  constraints.py  continual_metrics.py  continual_regularizers.py  dataset.py  dataset_validator.py  distillation.py  doctor.py  eval_protocol.py  export.py  gates.py  image_keys.py  image_size.py  imports.py  inference.py  inference_utils.py  instance_segmentation_eval.py  instance_segmentation_predictions.py  instance_segmentation_report.py  intrinsics.py  jitter.py  keypoints.py  keypoints_eval.py  letterbox.py  long_tail_metrics.py  long_tail_recipe.py  map_targets.py  math3d.py  metrics.py  (+25 more)
(+204 files in other folders)
