[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolozu"
dynamic = ["version"]
description = "Contract-first evaluation + tooling harness for detection/pose/segmentation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "YOLOZU contributors" }]
dependencies = ["PyYAML>=6.0", "numpy>=1.24", "Pillow>=10.0"]

[project.optional-dependencies]
demo = ["torch>=2.1"]

[project.scripts]
yolozu = "yolozu.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "yolozu.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["yolozu*"]

[tool.setuptools.package-data]
"yolozu.data" = [
  "configs/*.json",
  "configs/*.yaml",
  "configs/*.yml",
  "configs/continual/*.yaml",
  "configs/continual/*.yml",
  "protocols/*.json",
  "schemas/*.json",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
]

[tool.ruff.lint]
# Ignore E402 (module level import not at top of file) for tools and test files
# These files intentionally modify sys.path before importing local modules
[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402"]
"rtdetr_pose/tools/*.py" = ["E402"]
"rtdetr_pose/tests/*.py" = ["E402"]
"tests/*.py" = ["E402"]
