[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolozu"
dynamic = ["version"]
description = "Contract-first evaluation + tooling harness for detection/pose/segmentation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "YOLOZU contributors" }]
keywords = [
  "computer-vision",
  "object-detection",
  "segmentation",
  "pose-estimation",
  "tensorrt",
  "onnx",
  "onnxruntime",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["PyYAML>=6.0", "numpy>=1.24", "Pillow>=10.0"]

[project.urls]
Homepage = "https://github.com/thinksyncs/YOLOZU"
Repository = "https://github.com/thinksyncs/YOLOZU"
Issues = "https://github.com/thinksyncs/YOLOZU/issues"
Changelog = "https://github.com/thinksyncs/YOLOZU/blob/main/CHANGELOG.md"

[project.optional-dependencies]
demo = ["torch>=2.1"]
onnxrt = ["onnx>=1.14", "onnxruntime>=1.17"]
train = ["torch>=2.1", "onnx>=1.14", "onnxruntime>=1.17", "onnxscript>=0.1", "safetensors>=0.4"]
coco = ["pycocotools>=2.0.7"]
full = ["torch>=2.1", "onnx>=1.14", "onnxruntime>=1.17", "onnxscript>=0.1", "safetensors>=0.4", "pycocotools>=2.0.7"]

[project.scripts]
yolozu = "yolozu.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "yolozu.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["yolozu*", "rtdetr_pose*"]

[tool.setuptools.package-data]
"yolozu.data" = [
  "configs/*.json",
  "configs/*.yaml",
  "configs/*.yml",
  "configs/continual/*.yaml",
  "configs/continual/*.yml",
  "manifest/*.json",
  "manifest/*.md",
  "protocols/*.json",
  "schemas/*.json",
  "docs/*.md",
]
"rtdetr_pose" = ["configs/*.json"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
]

[tool.ruff.lint]
# Ignore E402 (module level import not at top of file) for tools and test files
# These files intentionally modify sys.path before importing local modules
[tool.ruff.lint.per-file-ignores]
"tools/*.py" = ["E402"]
"rtdetr_pose/tools/*.py" = ["E402"]
"rtdetr_pose/tests/*.py" = ["E402"]
"tests/*.py" = ["E402"]
